# person-tracking-thesis

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/yolo_pose_ros/share/yolo_pose_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
models/: common.py  yolo.py
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/msg/: BoundingBox.msg  PersonPose.msg
src/drspaam/: package.xml  setup.cfg  setup.py
src/drspaam/drspaam/: data_streamer.py  drspaam_node.py
src/tracker_pkg/: setup.cfg  setup.py
src/tracker_pkg/tracker_pkg/: tracker_node.py
src/yolo_pose_ros/: package.xml  setup.cfg  setup.py
src/yolo_pose_ros/yolo_pose_ros/: video_message_node.py  yolo_marker_node.py  yolo_pose_node.py
track_results/: MOT17-05-DPM.txt  MOT17-05-DPM_bigger_clip.txt  MOT17-05-DPM_clip_embedder.txt  MOT17-05-DPM_mobilenet_embedder.txt  YOLOCentroid.txt
track_results/CentroidTracker/1/: MOT17-02-DPM.txt  MOT17-04-DPM.txt  MOT17-05-DPM.txt  MOT17-10-DPM.txt  MOT17-11-DPM.txt  info.ini
track_results/CentroidTracker/2/: MOT17-02-DPM.txt  MOT17-04-DPM.txt  MOT17-05-DPM.txt  MOT17-10-DPM.txt  MOT17-11-DPM.txt  info.ini
track_results/CentroidTracker/3/: MOT17-02-DPM.txt  MOT17-04-DPM.txt  MOT17-05-DPM.txt  info.ini  (+2 more)
track_results/DeepSort_old/: MOT17-02-DPM.txt  MOT17-04-DPM.txt  MOT17-05-DPM_centroid_1.txt  MOT17-05-DPM_centroid_2.txt  MOT17-05-DPM_deepsort_1.txt  MOT17-05-DPM_deepsort_2.txt  MOT17-05-DPM_deepsort_3.txt  MOT17-09-DPM.txt  MOT17-10-DPM.txt  MOT17-11-DPM.txt  MOT17-13-DPM.txt
(+126 files in other folders)
