<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_pose_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tarasz98@gmail.com">taras</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>torch</depend>
  <depend>torchvision</depend>
  <depend>seondor_msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
